--- a/src/app/playground/playground.html
+++ b/src/app/playground/playground.html
@@ -1,4 +1,5 @@
 <div class="container mx-auto p-4 sm:p-8">
+  {{ newTime() }}
   <!-- <h1 class="text-2xl sm:text-3xl font-bold mb-6 text-center text-gray-800">
     Responsive YouTube Video Embed
   </h1> -->
@@ -29,6 +30,9 @@
       (ready)="onPlayerReady($event)"
       (stateChange)="onPlayerStateChange($event)"
       (focusRequest)="onFocusRequested()"
+      (messageEvent)="handleChildMessage($event)"
+      (updatedTime)="handleUpdatedTime($event)"
+      (evKeydown)="handleKeydownEvent($event)"
       suggestedQuality="default"
     ></app-youtube-embed>
   </div>
