--- a/src/app/youtube-embed/youtube-embed.html
+++ b/src/app/youtube-embed/youtube-embed.html
@@ -21,9 +21,9 @@
 <!-- <div style="margin-top: 50px; margin-left: 100px"> -->
 <div class="relative" style="padding-top: 2px">
   <!-- <h1 *ngIf="videoTitle" style="margin: 10px 0; color: #444">{{ videoTitle }}</h1> -->
-  <div class="text-xl">Last stopped at: {{ currentTime.toFixed(1) }}</div>
+  <!-- <div class="text-xl">Last stopped at: {{ currentTime.toFixed(1) }}</div>
   <p>
     {{ (currentTime / 60).toFixed(2) + ' minutes ' }}
     {{ (currentTime % 60).toFixed(1) + ' seconds' }}
-  </p>
+  </p> -->
 </div>
