--- a/src/app/playground/playground.html
+++ b/src/app/playground/playground.html
@@ -1,5 +1,6 @@
 <div class="container mx-auto p-4 sm:p-8">
-  {{ newTime() }}
+  <div>new time {{ newTime() }} inputNumber {{ inputNumber }} currentTime {{ currentTime }}</div>
+  <div></div>
   <!-- <h1 class="text-2xl sm:text-3xl font-bold mb-6 text-center text-gray-800">
     Responsive YouTube Video Embed
   </h1> -->
